[package]
name = "square"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.8"

[[bin]]
name = "sq"
path = "src/main.rs"

[profile.release]
lto = true
panic = "abort"

[profile.dev]
panic = "abort"

[dev-dependencies]
wasmtime = "12.0.1"
